--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "pet-care-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/petlogo.jpg",
     "scheme": "petcaretracker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
