--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "expo-location": "~19.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
