--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "~19.0.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
+    "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -46,8 +48,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
-    "tslib": "^2.6.2",
-    "expo-location": "~19.0.7"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
