--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "^2.11.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -21,7 +21,7 @@
     "expo": "^54",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
+    "expo-font": "~14.0.8",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
@@ -42,11 +42,12 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.6.2"
   },
