--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "^0.32.11",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
