--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
