--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "expo": "^54",
@@ -25,6 +27,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~7.1.7",
     "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.11",
@@ -43,15 +46,16 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-tab-view": "^4.1.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
-    "tslib": "^2.6.2",
-    "expo-linear-gradient": "~15.0.7"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
