--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.ishaniekanayake.petcaretracker"
     },
     "web": {
       "bundler": "metro",
@@ -25,6 +26,10 @@
     },
     "plugins": [
       "expo-router",
+    
+      "expo-dev-client",
+      "expo-notifications",
+
       [
         "expo-splash-screen",
         {
@@ -37,6 +42,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "7f24232b-68fc-4bf1-a658-f88e5d56c404"
+      }
     }
   }
 }
