--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -23,6 +23,7 @@
     "expo": "^54",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -60,7 +61,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/axios": "^0.9.36",
+    "@types/node": "^24.5.2",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
