--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pet-care-tracker",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -12,48 +13,48 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
-    "expo": "^54",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
+    "expo": "^54.0.0",
+    "expo-blur": "15.0.7",
+    "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-picker": "~16.1.4",
+    "expo-haptics": "15.0.7",
+    "expo-image": "3.0.8",
+    "expo-image-picker": "17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~7.1.7",
+    "expo-linking": "8.0.8",
     "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.11",
-    "expo-router": "~5.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
+    "expo-router": "6.0.7",
+    "expo-splash-screen": "31.0.10",
+    "expo-status-bar": "3.0.8",
+    "expo-symbols": "1.0.7",
+    "expo-system-ui": "6.0.7",
+    "expo-web-browser": "15.0.7",
     "firebase": "^12.2.1",
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "^0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-screens": "4.16.0",
     "react-native-tab-view": "^4.1.3",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "0.21.1",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.6.2"
@@ -62,11 +63,9 @@
     "@babel/core": "^7.25.2",
     "@types/axios": "^0.9.36",
     "@types/node": "^24.5.2",
-    "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "^19.1.13",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
-  },
-  "private": true
+    "eslint-config-expo": "10.0.0",
+    "typescript": "5.9.2"
+  }
 }
